--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,4 +1,4 @@
-<form action="/volunteer_patient_page/search/:family_code" method="post">
+<form action="/volunteer_patient_page/search" method="post">
   <label>Enter your family code:</label>
   <input type=text name="family_code" placeholder="Numerical Code" />
   <input type=submit name="Submit" />
