--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -3,23 +3,6 @@
 <html>
 
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/season-change.jpg" type="image/x-icon">
-    <title>Mediliza</title>
-
-      <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-      <!-- <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,500,700' rel='stylesheet' type='text/css'> -->
-      <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-      <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600' rel='stylesheet' type='text/css'>
-      
-
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
 
   <body>
@@ -45,9 +28,7 @@
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="/volunteer_home_page">Volunteers</a></li>
-                  <li><a href="/enduser">Doctors</a></li>
-                  <li><a href="faq.html">FAQs</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="/enduser">Nurses</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -76,7 +57,7 @@
             <main class="blog1col col-md-9">    
                   <div class="col-md-8 col-sm-8">
                     <ul class="list-inline info">
-                      <li><i class="fa fa-user-md"></i> <a href="/enduser2/'#{item.patient_id}'"><%="#{item.first_name}, #{item.last_name}"%></a></li>
+                      <li><i class="fa fa-user-md"></i> <a href="/enduser2/"><%="#{item.first_name}, #{item.last_name}"%></a></li>
                       <li><i class="fa fa-calendar"></i> <%="Admitted: #{item.created_at.strftime('%x')}"%></li>
  
                     </ul>
