--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -45,13 +45,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="doctors.html">Doctors</a></li>
-                  <li><a href="blog.html">Blog</a></li>
-              <li><a href="faq.html">FAQs</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/volunteer_home_page">Volunteers</a></li>
+                  <li><a href="/enduser">Nurses</a></li>
                 </ul>
             </div><!-- navbar-collapse -->
         </div><!-- container-fluid -->
@@ -66,57 +62,27 @@
                 <p class="welcome-txt">The speed of recovery and quality of life of patients is greatly increased by the interactions they have with volunteers throughout the hospital.  The medical team will gain greater understanding of the patient's daily activites and recovery.  The volunteer team will have a streamlined method of recording their interactions with patients which will contribute to the patients overall wellbeing. 
                 </p>
               </div>
+                <div class="row text-center service"><a href="/volunteer_home_page">
+                  <div class="service-icon text-center" >
+                    <i class="fa fa-stethoscope fa-5x"></i>
+                  </div>
+                </div>
+                <div class="row text-center">
+                  <div class="about-service">
+                    <h3 class="text-center">Enter<a href="/volunteer_home_page"></h3>
+                  </div>
+                </div>  
+             
             </div>
           </div>
       </section>
 
-      <section class= "second-box">            
-        <div class="container">
-          <span class="or">Login</span>
-        </div>
-
-                <!-- form of appointment -->
-        <div class="row">
-          <form method="post" action="#">
-                    <div class= "form">
-                      <div class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                        <input class="form-control" type="text" placeholder="Full Name *" required>
-                      </div>
-                      <div class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                        <input class="form-control" type="text" placeholder="Email Address *" required>
-                      </div>
-                      <div class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                        <input class="form-control" type="text" placeholder="Appointment Date *" required>
-                      </div>
-                      <div class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                        <input class="form-control" type="text" placeholder="Mobile Number *" required>
-                      </div>
-                    </div>
-                    <div class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                      <textarea class="form-control" rows="6" placeholder="Your Problem *" required></textarea>
-                    </div>
-                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                      <div class="captcha-container">
-                                          <label>Are you human? </label><br/>
-                                          <img src="http://inspirythemesdemo.com/healthpress/wp-content/themes/healthpress-theme/captcha/captcha.php" alt="">
-                                          <input type="text" class="captcha required" name="captcha" maxlength="5" title=" Please enter the code characters displayed in image!">
-                                      </div>
-                      <input class="btn btn-primary send" type="submit" value="Send">
-                    </div>
-                  </form>
-        </div>
-                <!-- end of form -->
-              </div><!-- end of appointment-->
-              </div>
-            </div> <!--  client-content  -->
-          </div>
-      </div>  
-      </section>  <!-- testimonial -->
-
+              
 
     <section id="footer">
       <div class="container">
         <div class="row">
+          
           <div class="col-md-6 col-md-offset-3">
             <ul class="text-center contact">
                   <li class= "socials-icons">
@@ -143,7 +109,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="copy-right-text text-center">
-              &copy; Copyright 2014, Your Website Link. Theme by <a href="https://themewagon.com/">ThemeWagon</a>
+              &copy;Theme by <a href="https://themewagon.com/">ThemeWagon</a>
             </div>
           </div>
         </div>
