--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,16 +1,75 @@
-<% if @patients && @patients.errors.any? %>
-  <div>
-    <ul>
-      <% @patients.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+  <body>
+    <section class= "navs">
+      <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand logo" href="#">
+                  <span><i class="fa fa-stethoscope"></i></span>
+                  Mediliza
+                </a>
+            </div>
+    
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/volunteer_home_page">Volunteers</a></li>
+                  <li><a href="/enduser">Nurses</a></li>
+                </ul>
+            </div><!-- navbar-collapse -->
+        </div><!-- container-fluid -->
+      </nav>
+    </section>
+
+    <section class= "starting-text">
+          <div class="container">
+            <div class="row">
+              <div style="padding-bottom: 0px;" class="welcome">
+                <h1 class="welcome-title">Find patient interaction records:</h1>
+              </div>
+                
+                <div class="row text-center">
+                  <div style="padding-bottom: 100px;" class="about-service text-center">
+                    <h3>
+                      <% if @patients && @patients.errors.any? %>
+                        <div>
+                          <ul>
+                            <% @patients.errors.full_messages.each do |message| %>
+                              <li><%= message %></li>
+                            <% end %>
+                          </ul>
+                        </div>
+                      <% end %>
+                    </h3>
+                      <form action="/volunteer_patient_page/search/result" method="get">
+                        <h3><input type=text name="family_code" placeholder="10-Digit Code" value="<%= @patients && @patients.family_code %>" /></h3>
+                        <p><button style="
+                                            background-color: #67B2C1; 
+                                            border: none;border: none;
+                                            padding-top: 0;
+                                            padding-left: 0;
+                                            border-radius: 75px;
+                                            height: 150px;
+                                            width: 150px;"
+                          type="submit" class="row text-center service">
+                          <div type="submit" class="service-icon text-center" >
+                            <i class="fa fa-stethoscope fa-5x"></i>
+                          </div>
+                        </button><p>
+                      </form>
+                  </div>
+                </div>  
+            </div>
+          </div>
+      </section>
+  </body>
 
 
-<form action="/volunteer_patient_page/search" method="post">
-  <label>Enter your family code:</label>
-  <input type=text name="family_code" placeholder="10-Digit Numerical Code" value="<%= @patients && @patients.family_code %>" />
-  <input type=submit name="Submit" />
-</form>
+
