--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 
   <head>
-    
+    <link rel="stylesheet" type="text/css" href="/assets/css/media_hack.css">
   </head>
 
   <body>
@@ -50,7 +50,7 @@
                                             height: 150px;
                                             width: 150px;"
               ><div class="container">
-              <div class="container-fluid row text-center service"><p><a href="/volunteer_home_page"> 
+              <div id="enter" class="container-fluid row text-center service"><p><a href="/volunteer_home_page"> 
                           <div type="submit" class="row-fluid service-icon text-center" >
                             <i class="fa fa-stethoscope fa-5x"></i>
                           </div>
