--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -33,7 +33,7 @@
       </nav>
     </section>
 
-    <section class= "starting-text">
+    <section class= "starting-text" style="padding-bottom: 100px;">
           <div class="container">
             <div class="row">
               <div class="welcome">
@@ -43,20 +43,26 @@
               </div>
 
               <button style="
-                                            background-color: #67B2C1; 
-                                            border: none;border: none;
-                                            padding-top: 0;
-                                            padding-left: 0;  
-                                            border-radius: 75px;
-                                            height: 150px;
-                                            width: 150px;"
-              ><div class="container">
-              <div class="container-fluid row text-center service"><p><a href="/volunteer_home_page"> 
-                          <div type="submit" class="row-fluid service-icon text-center" >
-                            <i class="fa fa-stethoscope fa-5x"></i>
-                          </div>
-                       </a></p></div>
-              </div></button>
+                  background-color: #67B2C1; 
+                  border: none;
+                  padding-top: 0;
+                  padding-left: 0;  
+                  border-radius: 75px;
+                  height: 100px;
+                  width: 150px;
+                  margin-left: -75px;
+                  position: relative;
+                  left: 50%;
+                  "
+                  class="container-fluid row text-center service"
+                  href="/volunteer_home_page"
+                  type="submit" 
+                   >
+             
+                  <div class="row-fluid service-icon text-center" >
+                    <i class="fa fa-stethoscope fa-5x"></i>
+                  </div>
+                </button>
              
 
             </div>
