--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -95,32 +95,11 @@
                 </div>  
                 </br>
               <h4><span>Most recently visited patients: </span></h4>
-              <h4><span> On <%= "#{Date.today}" %></span></h4>
               <ul style =  "width: 400px;">
                 <li class="cat-item cat-item-4">
-                  <% @patient = @patients.sample %> 
+                  <% @patient = @patients.first %> 
                   <a href="/volunteer_patient_page/<%= @patient.id %> " title="View all posts filed under Data"><%="#{@patient.first_name} #{@patient.last_name} "%></a> 
                   
-                </li>
-
-                <li class="cat-item cat-item-3">
-                <% @patient = @patients.sample %> 
-                  <a href="/volunteer_patient_page/<%= @patient.id %> " title="View all posts filed under Lesti"><%="#{@patient.first_name} #{@patient.last_name} "%></a>
-                </li>
-
-                <li class="cat-item cat-item-5">
-                <% @patient = @patients.sample %> 
-                  <a href="/volunteer_patient_page/<%= @patient.id %> " title="View all posts filed under Nean condimentum"><%="#{@patient.first_name} #{@patient.last_name} "%></a>
-                </li>
-
-                <li class="cat-item cat-item-1">
-                <% @patient = @patients.sample %> 
-                  <a href="/volunteer_patient_page/<%= @patient.id %> " title="View all posts filed under News"><%="#{@patient.first_name} #{@patient.last_name} "%></a>
-                </li>
-
-                <li class="cat-item cat-item-21">
-                <% @patient = @patients.sample %> 
-                  <a href="/volunteer_patient_page/<%= @patient.id %> " title="View all posts filed under Slide"><%="#{@patient.first_name} #{@patient.last_name} "%></a>
                 </li>
               </ul>
             </div>
