--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -1,7 +1,3 @@
-<!DOCTYPE html>
-
-<html>
-<h1><%= "#{@patients.first_name} #{@patients.last_name} (#{@patients.nick_name}), you are #{@patients.staff.first_name}'s patient. " %></h1>
   <head>
     
     <title>Mediliza Homepage</title>
@@ -27,15 +23,13 @@
             </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li class="active"><a href="#">Volunteer</a></li>
-              <li><a href="faq.html">FAQs</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-                </ul>
+           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+               <ul class="nav navbar-nav navbar-right">
+                <li><a href="/">Home</a></li>
+                <li><a href="/volunteer_home_page">Volunteers</a></li>
+                <li><a href="/enduser">Nurses</a></li>
+                <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+              </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
@@ -49,7 +43,7 @@
           </div>
           <div class="row">
             <div class="sub-headline">
-              <p style = " text-align: left;"> Hi <%="#{@volunteers.first.first_name}, #{@volunteers.first.last_name} "%></p> 
+              <p style = " text-align: left;"> Hi <%="#{@volunteers.first.first_name} #{@volunteers.first.last_name} "%></p> 
             </div>
           </div>  
         </div>
@@ -59,40 +53,19 @@
     <section class= "blog-content">
       <div class= "container">
         <div class= "row">
-          <main class="blog1col col-md-9">
-             
-          </main>
-
-
-          <!-- <aside class="col-md-3 "> -->
-            <div class="container">
-      <div class="row">
-      <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
-           <A href="edit.html" >Patient Profile</A>
-
-       <!--  <A href="edit.html" >Logout</A> -->
-       <br>
-        <p class=" text-info">Next available visit time: <%="#{Date.today}" %> </p>
-      </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
-   
-   
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h3 class="panel-title"><%= "#{@patients.first_name} #{@patients.last_name} "%></h3>
-            </div>
-            <div class="panel-body">
-              <div class="row">
-                <div class="col-md-3 col-lg-3 " align="center"> <!-- <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div> -->
-                
-                <!--<div class="col-xs-10 col-sm-10 hidden-md hidden-lg"> <br>
-                  
-                </div>-->
-                <div class=" col-md-9 col-lg-9 "> 
+          <main class="text-center">
+        
+              <h3>Patient Profile</h3>
+              <h3>Next available visit time: <%="#{Date.today}" %> </h3>
+            <div class="panel panel-info" style="border: none;">
+              <div class="panel-heading">
+                <h3 class="panel-title"><%= "#{@patients.first_name} #{@patients.last_name} "%></h3>
+              </div>
+              <div class="panel-body">
                   <table class="table table-user-information">
                     <tbody>
                       <tr>
-                        <td>Patient ID</td>
+                        <td>Patient ID:</td>
                         <td><%= "#{@patients.id}"%></td>
                       </tr>
                       <tr>
@@ -100,118 +73,60 @@
                         <td> <%= "#{@patients.nick_name}"%></td>
                       </tr>
                       <tr>
-                        <td>Language Requirements</td>
+                        <td>Language Requirements:</td>
                         <td><%="#{@patients.language}" %></td>
                       </tr>
-                   
-                        <!--  <tr> -->
-                             <tr>
-                        <td>Special Needs</td>
-                        <td></td>
-                      </tr>
-                        <tr>
-                        <td></td>
+                      <tr>
+                        <td>Mobility:</td>
                         <td><%="#{@patients.mobility_type}" %></td>
                       </tr>
                       <tr>
-                        <td></td>
+                        <td>Beverage Type:</td>
                         <td> <%="#{@patients.beverage_type}" %></td>
                       </tr>
-                        <td>Emergency Contact</td>
+                      <tr>
+                        <td>Emergency Contact:</td>
                         <td><%="#{@patients.staff.first_name} #{@patients.staff.last_name}" %>
-                        </td>
-                           
-                      </tr>
-                     
+                        </td>   
+                      </tr>                   
                     </tbody>
                   </table>
-                  
-                  <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
-                 
-                </div>
-              </div>
             </div>
-                 <div class="panel-footer">
-                        <a data-original-title="Broadcast Message"></a>
-                        <span class="pull-right">
-                        </span>
-                    </div>
-            
+            <div class="widget widget_categories" id="categories-3" style="position: center">
+      <form action = " /volunteer_patient_page" method = "post" > 
+        <h3> Observation and comments after patient visit </h3>
+        <textarea type= "text" name = "observation" rows = "6" cols = "50" >  </textarea>
+                <div class="checkbox">
+                  <label>
+                    <input type="checkbox" name = "beverage" />
+                    Did Patient drink water during visit? 
+                  </label>
+                  </br>
+                </div>
+                <input type= "hidden" value=<%= @patients.id %> name = "id">
+                <div>
+                   <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
+                   <input class="btn btn-primary" type= "submit" name= "submit" > 
+                </div> 
+      </form>  
+      </br>
+       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" style="align: center">
+            <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
+          </div>  
+          </div>
+          </main>
+         
           </div>
         </div>
       </div>
     </div>
 
-            <div class="widget widget_categories" id="categories-3">
-            <form action = " /volunteer_patient_page" method = "post" > 
-              <h4><strong> Observation and comments after patient visit </strong></h4>
-                
-                  <textarea type= "text" name = "observation" rows = "6" cols = "50" >  </textarea>
 
-               </div>
 
-                   <div class="checkbox">
-                  <label>
-                    <input type="checkbox" checked = "checked" name = "beverage" />
-                    Did Patient drink water during visit? 
-                  </label>
-                  </br>
-                   <label>
-                   <!--  <input type="checkbox" value= <"true ">
-                    Was patient able to walk during visit? 
-                  </label> -->
-                </div>
-                <input type= "hidden" value=<%= @patients.id %> name = "id">
-                <div>
-                  </br>
-                  </br> 
-                   <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
-                   <input type= "submit" name= "submit" > 
-                </div> 
-            </form>  
-             
-<!-- 
-
-    <section id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <ul class="text-center contact">
-                  <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Facebook" class="facebook"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Twitter" class="twitter"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Google +" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Instagram" class="instagram"><i class="fa fa-instagram"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Pinterest" class="pinterest"><i class="fa fa-pinterest"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Connect with Skype" class="skype"><i class="fa fa-skype"></i></a>
-              </li>
-                </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="copy-right-text text-center">
-              &copy; Copyright 2014, Your Website Link. Theme by <a href="https://themewagon.com/">ThemeWagon</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/wow.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>    
+    <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/assets/js/wow.min.js"></script>
+    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/js/isotope.pkgd.min.js"></script>    
 
 
 
@@ -220,4 +135,3 @@
     </script>
 
   </body>
-</html>
